other/res/restrict-deprecated-registry/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-deprecated-registry
status:
  ready: true
