other/res/restrict-deprecated-registry/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-deprecated-registry
policies:
- restrict-deprecated-registry.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: policy-test/restrict-deprecated-registry
  resources:
  - test-pod-bad
  result: fail
  rule: restrict-deprecated-registry
- kind: Pod
  policy: policy-test/restrict-deprecated-registry
  resources:
  - test-pod-good
  result: pass
  rule: restrict-deprecated-registry
